salesforce_sfdx/main/default/objects/IMS_English_Menu__c/IMS_English_Menu__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>IMS User Menus Only English</description>
    <label>IMS English Menu</label>
</CustomObject>