salesforce_sfdx/main/default/objects/IMS_English_Menu__c/fields/Menu_Label__c.field-meta.xml
<CustomField>
    <fullName>Menu_Label__c</fullName>
    <description>IMS Menu Labels</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Give a Specifc English Labels</inlineHelpText>
    <label>Menu Label</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>