salesforce_sfdx/main/default/objects/IMS_English_Menu__c/fields/Menu_Order__c.field-meta.xml
<CustomField>
    <fullName>Menu_Order__c</fullName>
    <description>IMS Menu Order of alignment</description>
    <inlineHelpText>Give what order menu should display</inlineHelpText>
    <label>Menu Order</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>