salesforce_sfdx/main/default/objects/IMS_English_Menu__c/fields/Menu_Type__c.field-meta.xml
<CustomField>
    <fullName>Menu_Type__c</fullName>
    <description>Type of IMS menu ex. Profile,Main Menu etc.,</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Type of IMS menu ex. Profile,Main Menu etc.,</inlineHelpText>
    <label>Menu User</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>