salesforce_sfdx/main/default/objects/IMS_English_Menu__c/fields/Menu_URL__c.field-meta.xml
<CustomField>
    <fullName>Menu_URL__c</fullName>
    <description>IMS Menu Navigation URL</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Give a wrapper URL</inlineHelpText>
    <label>Menu URL</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>